--- a/applications/photom/sun45.tex
+++ b/applications/photom/sun45.tex
@@ -1,549 +1,48 @@
-\documentclass[twoside,11pt]{article}
+\documentclass[twoside,11pt,nolof]{starlink}
 
 % ? Specify used packages
-\usepackage{graphicx}        %  Use this one for final production.
-% \usepackage[draft]{graphicx} %  Use this one for drafting.
 % ? End of specify used packages
 
-\pagestyle{myheadings}
+
 
 % -----------------------------------------------------------------------------
 % ? Document identification
 % Fixed part
-\newcommand{\stardoccategory}  {Starlink User Note}
-\newcommand{\stardocinitials}  {SUN}
-\newcommand{\stardocsource}    {sun\stardocnumber}
+\stardoccategory    {Starlink User Note}
+\stardocinitials    {SUN}
+\stardocsource      {sun\stardocnumber}
 
 % Variable part - replace [xxx] as appropriate.
-\newcommand{\stardocnumber}    {45.16}
-\newcommand{\stardocauthors}   {Nicholas Eaton, Peter W.\ Draper \& Alasdair Allan}
-\newcommand{\stardocdate}      {27th November 2009}
-\newcommand{\stardoctitle}     {PHOTOM --- A Photometry Package }
-\newcommand{\stardocversion}   {Version 1.12-0}
-\newcommand{\stardocmanual}    {User's Manual}
-\newcommand{\stardocabstract}  {
-  \begin{center}
+\stardocnumber      {45.16}
+\stardocauthors     {Nicholas Eaton, Peter W.\ Draper \& Alasdair Allan}
+\stardocdate        {27th November 2009}
+\stardoctitle       {PHOTOM --- A Photometry Package }
+\stardocversion     {Version 1.12-0}
+\stardocmanual      {User's Manual}
+\startitlepic{\includegraphics{sun45_cover}}
+\stardocabstract  {
     \htmlref{PHOTOM}{PHOTOM} is a package for measuring the sky corrected
     magnitudes and fluxes of astronomical objects, within circular and
     elliptical apertures, using either the aperture or optimal extraction
     algorithms.
-  \end{center}
   }
 % ? End of document identification
 % -----------------------------------------------------------------------------
 
-% +
-%  Name:
-%     sun.tex
-%
-%  Purpose:
-%     Template for Starlink User Note (SUN) documents.
-%     Refer to SUN/199
-%
-%  Authors:
-%     AJC: A.J.Chipperfield (Starlink, RAL)
-%     BLY: M.J.Bly (Starlink, RAL)
-%     PWD: Peter W. Draper (Starlink, Durham University)
-%
-%  History:
-%     17-JAN-1996 (AJC):
-%        Original with hypertext macros, based on MDL plain originals.
-%     16-JUN-1997 (BLY):
-%        Adapted for LaTeX2e.
-%        Added picture commands.
-%     13-AUG-1998 (PWD):
-%        Converted for use with LaTeX2HTML version 98.2 and
-%        Star2HTML version 1.3.
-%     {Add further history here}
-%
-% -
-
-\newcommand{\stardocname}{\stardocinitials /\stardocnumber}
-\markboth{\stardocname}{\stardocname}
-\setlength{\textwidth}{160mm}
-\setlength{\textheight}{230mm}
-\setlength{\topmargin}{-2mm}
-\setlength{\oddsidemargin}{0mm}
-\setlength{\evensidemargin}{0mm}
-\setlength{\parindent}{0mm}
-\setlength{\parskip}{\medskipamount}
-\setlength{\unitlength}{1mm}
-
 % -----------------------------------------------------------------------------
-%  Hypertext definitions.
-%  ======================
-%  These are used by the LaTeX2HTML translator in conjunction with star2html.
-
-%  Comment.sty: version 2.0, 19 June 1992
-%  Selectively in/exclude pieces of text.
-%
-%  Author
-%    Victor Eijkhout                                      <eijkhout@cs.utk.edu>
-%    Department of Computer Science
-%    University Tennessee at Knoxville
-%    104 Ayres Hall
-%    Knoxville, TN 37996
-%    USA
-
-%  Do not remove the %begin{latexonly} and %end{latexonly} lines (used by
-%  LaTeX2HTML to signify text it shouldn't process).
-%begin{latexonly}
-\makeatletter
-\def\makeinnocent#1{\catcode`#1=12 }
-\def\csarg#1#2{\expandafter#1\csname#2\endcsname}
-
-\def\ThrowAwayComment#1{\begingroup
-    \def\CurrentComment{#1}%
-    \let\do\makeinnocent \dospecials
-    \makeinnocent\^^L% and whatever other special cases
-    \endlinechar`\^^M \catcode`\^^M=12 \xComment}
-{\catcode`\^^M=12 \endlinechar=-1 %
- \gdef\xComment#1^^M{\def\test{#1}
-      \csarg\ifx{PlainEnd\CurrentComment Test}\test
-          \let\html@next\endgroup
-      \else \csarg\ifx{LaLaEnd\CurrentComment Test}\test
-            \edef\html@next{\endgroup\noexpand\end{\CurrentComment}}
-      \else \let\html@next\xComment
-      \fi \fi \html@next}
-}
-\makeatother
-
-\def\includecomment
- #1{\expandafter\def\csname#1\endcsname{}%
-    \expandafter\def\csname end#1\endcsname{}}
-\def\excludecomment
- #1{\expandafter\def\csname#1\endcsname{\ThrowAwayComment{#1}}%
-    {\escapechar=-1\relax
-     \csarg\xdef{PlainEnd#1Test}{\string\\end#1}%
-     \csarg\xdef{LaLaEnd#1Test}{\string\\end\string\{#1\string\}}%
-    }}
-
-%  Define environments that ignore their contents.
-\excludecomment{comment}
-\excludecomment{rawhtml}
-\excludecomment{htmlonly}
-
-%  Hypertext commands etc. This is a condensed version of the html.sty
-%  file supplied with LaTeX2HTML by: Nikos Drakos <nikos@cbl.leeds.ac.uk> &
-%  Jelle van Zeijl <jvzeijl@isou17.estec.esa.nl>. The LaTeX2HTML documentation
-%  should be consulted about all commands (and the environments defined above)
-%  except \xref and \xlabel which are Starlink specific.
-
-\newcommand{\htmladdnormallinkfoot}[2]{#1\footnote{#2}}
-\newcommand{\htmladdnormallink}[2]{#1}
-\newcommand{\htmladdimg}[1]{}
-\newcommand{\hyperref}[4]{#2\ref{#4}#3}
-\newcommand{\htmlref}[2]{#1}
-\newcommand{\htmlimage}[1]{}
-\newcommand{\htmladdtonavigation}[1]{}
-
-\newenvironment{latexonly}{}{}
-\newcommand{\latex}[1]{#1}
-\newcommand{\html}[1]{}
-\newcommand{\latexhtml}[2]{#1}
-\newcommand{\HTMLcode}[2][]{}
-
-%  Starlink cross-references and labels.
-\newcommand{\xref}[3]{#1}
-\newcommand{\xlabel}[1]{}
-
-%  LaTeX2HTML symbol.
-\newcommand{\latextohtml}{\LaTeX2\texttt{HTML}}
-
-%  Define command to re-centre underscore for Latex and leave as normal
-%  for HTML (severe problems with \_ in tabbing environments and \_\_
-%  generally otherwise).
-\renewcommand{\_}{\texttt{\symbol{95}}}
-
-% -----------------------------------------------------------------------------
-%  Debugging.
-%  =========
-%  Remove % on the following to debug links in the HTML version using Latex.
-
-% \newcommand{\hotlink}[2]{\fbox{\begin{tabular}[t]{@{}c@{}}#1\\\hline{\footnotesize #2}\end{tabular}}}
-% \renewcommand{\htmladdnormallinkfoot}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\htmladdnormallink}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\hyperref}[4]{\hotlink{#1}{\S\ref{#4}}}
-% \renewcommand{\htmlref}[2]{\hotlink{#1}{\S\ref{#2}}}
-% \renewcommand{\xref}[3]{\hotlink{#1}{#2 -- #3}}
-%end{latexonly}
-% -----------------------------------------------------------------------------
-% ? Document specific \newcommand or \newenvironment commands.
+% ? Document specific \providecommand or \newenvironment commands.
 
 %  Quotes for SST descriptions.
-\newcommand{\qt}[1]{``#1''}
-\newcommand{\st}[1]{\texttt{`#1'}}
-\newcommand{\ft}[1]{``\texttt{#1}''}
-
-%+
-%  Name:
-%     SST.TEX
-
-%  Purpose:
-%     Define LaTeX commands for laying out Starlink routine descriptions.
-
-%  Language:
-%     LaTeX
-
-%  Type of Module:
-%     LaTeX data file.
-
-%  Description:
-%     This file defines LaTeX commands which allow routine documentation
-%     produced by the SST application PROLAT to be processed by LaTeX and
-%     by LaTeX2html. The contents of this file should be included in the
-%     source prior to any statements that make of the sst commnds.
-
-%  Notes:
-%     The style file html.sty provided with LaTeX2html needs to be used.
-%     This must be before this file.
-
-%  Authors:
-%     RFWS: R.F. Warren-Smith (STARLINK)
-%     PDRAPER: P.W. Draper (Starlink - Durham University)
-
-%  History:
-%     10-SEP-1990 (RFWS):
-%        Original version.
-%     10-SEP-1990 (RFWS):
-%        Added the implementation status section.
-%     12-SEP-1990 (RFWS):
-%        Added support for the usage section and adjusted various spacings.
-%     8-DEC-1994 (PDRAPER):
-%        Added support for simplified formatting using LaTeX2html.
-%     {enter_further_changes_here}
-
-%  Bugs:
-%     {note_any_bugs_here}
-
-%-
-
-%  Define length variables.
-\newlength{\sstbannerlength}
-\newlength{\sstcaptionlength}
-\newlength{\sstexampleslength}
-\newlength{\sstexampleswidth}
-
-%  Define a \tt font of the required size.
-\latex{\newfont{\ssttt}{cmtt10 scaled 1095}}
-\html{\newcommand{\ssttt}{\tt}}
-
-%  Define a command to produce a routine header, including its name,
-%  a purpose description and the rest of the routines documentation.
-\newcommand{\sstroutine}[3]{
-   \label{#1}
-   \goodbreak
-   \rule{\textwidth}{0.5mm}
-   \vspace{-7ex}
-   \newline
-   \settowidth{\sstbannerlength}{{\Large \textbf{#1}}}
-   \setlength{\sstcaptionlength}{\textwidth}
-   \setlength{\sstexampleslength}{\textwidth}
-   \addtolength{\sstbannerlength}{0.5em}
-   \addtolength{\sstcaptionlength}{-2.0\sstbannerlength}
-   \addtolength{\sstcaptionlength}{-5.0pt}
-   \settowidth{\sstexampleswidth}{\textbf{Examples:}}
-   \addtolength{\sstexampleslength}{-\sstexampleswidth}
-   \parbox[t]{\sstbannerlength}{\flushleft{\Large \textbf{#1}}}
-   \parbox[t]{\sstcaptionlength}{\center{\Large #2}}
-   \parbox[t]{\sstbannerlength}{\flushright{\Large \textbf{#1}}}
-   \begin{description}
-      #3
-   \end{description}
-}
-
-%  Format the description section.
-\newcommand{\sstdescription}[1]{\item[Description:] #1}
-
-%  Format the usage section.
-\newcommand{\sstusage}[1]{\item[Usage:] \mbox{}
-\\[1.3ex]{\raggedright \ssttt #1}}
-
-%  Format the invocation section.
-\newcommand{\sstinvocation}[1]{\item[Invocation:]\hspace{0.4em}\texttt{#1}}
-
-%  Format the arguments section.
-\newcommand{\sstarguments}[1]{
-   \item[Arguments:] \mbox{} \\
-   \vspace{-3.5ex}
-   \begin{description}
-      #1
-   \end{description}
-}
-
-%  Format the returned value section (for a function).
-\newcommand{\sstreturnedvalue}[1]{
-   \item[Returned Value:] \mbox{} \\
-   \vspace{-3.5ex}
-   \begin{description}
-      #1
-   \end{description}
-}
-
-%  Format the parameters section (for an application).
-\newcommand{\sstparameters}[1]{
-   \item[Parameters:] \mbox{} \\
-   \vspace{-3.5ex}
-   \begin{description}
-      #1
-   \end{description}
-}
-
-%  Format the examples section.
-\newcommand{\sstexamples}[1]{
-   \item[Examples:] \mbox{} \\
-   \vspace{-3.5ex}
-   \begin{description}
-      #1
-   \end{description}
-}
-
-%  Define the format of a subsection in a normal section.
-\newcommand{\sstsubsection}[1]{ \item[{#1}] \mbox{} \\}
-
-%  Define the format of a subsection in the examples section.
-\newcommand{\sstexamplesubsection}[2]{\sloppy
-\item[\parbox{\sstexampleslength}{\ssttt #1}] \mbox{} \vspace{1.0ex}
-\\ #2 }
-
-%  Format the notes section.
-\newcommand{\sstnotes}[1]{\item[Notes:] \mbox{} \\[1.3ex] #1}
-
-%  Provide a general-purpose format for additional (DIY) sections.
-\newcommand{\sstdiytopic}[2]{\item[{\hspace{-0.35em}#1\hspace{-0.35em}:}]
-\mbox{} \\[1.3ex] #2}
-
-%  Format the implementation status section.
-\newcommand{\sstimplementationstatus}[1]{
-   \item[{Implementation Status:}] \mbox{} \\[1.3ex] #1}
-
-%  Format the bugs section.
-\newcommand{\sstbugs}[1]{\item[Bugs:] #1}
-
-%  Format a list of items while in paragraph mode.
-\newcommand{\sstitemlist}[1]{
-  \mbox{} \\
-  \vspace{-3.5ex}
-  \begin{itemize}
-     #1
-  \end{itemize}
-}
-
-%  Define the format of an item.
-\newcommand{\sstitem}{\item}
-
-%% Now define html equivalents of those already set. These are used by
-%  latex2html and are defined in the html.sty files.
-\begin{htmlonly}
-
-%  sstroutine.
-   \newcommand{\sstroutine}[3]{
-      \subsection{#1\xlabel{#1}-\label{#1}#2}
-      \begin{description}
-         #3
-      \end{description}
-   }
-
-%  sstdescription
-   \newcommand{\sstdescription}[1]{\item[Description:]
-      \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstusage
-   \newcommand{\sstusage}[1]{\item[Usage:]
-      \begin{description}
-         {\ssttt #1}
-      \end{description}
-      \\
-   }
-
-%  sstinvocation
-   \newcommand{\sstinvocation}[1]{\item[Invocation:]
-      \begin{description}
-         {\ssttt #1}
-      \end{description}
-      \\
-   }
-
-%  sstarguments
-   \newcommand{\sstarguments}[1]{
-      \item[Arguments:] \\
-      \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstreturnedvalue
-   \newcommand{\sstreturnedvalue}[1]{
-      \item[Returned Value:] \\
-      \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstparameters
-   \newcommand{\sstparameters}[1]{
-      \item[Parameters:] \\
-      \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstexamples
-   \newcommand{\sstexamples}[1]{
-      \item[Examples:] \\
-      \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstsubsection
-   \newcommand{\sstsubsection}[1]{\item[{#1}]}
-
-%  sstexamplesubsection
-   \newcommand{\sstexamplesubsection}[2]{\item[{\ssttt #1}] #2}
-
-%  sstnotes
-   \newcommand{\sstnotes}[1]{\item[Notes:] #1 }
-
-%  sstdiytopic
-   \newcommand{\sstdiytopic}[2]{\item[{#1}] #2 }
-
-%  sstimplementationstatus
-   \newcommand{\sstimplementationstatus}[1]{
-      \item[Implementation Status:] #1
-   }
-
-%  sstitemlist
-   \newcommand{\sstitemlist}[1]{
-      \begin{itemize}
-         #1
-      \end{itemize}
-      \\
-   }
-%  sstitem
-   \newcommand{\sstitem}{\item}
-
-\end{htmlonly}
-
-%  End of "sst.tex" layout definitions.
-%.
+\providecommand{\qt}[1]{``#1''}
+\providecommand{\st}[1]{\texttt{`#1'}}
+\providecommand{\ft}[1]{``\texttt{#1}''}
 
 % ? End of document specific commands
 % -----------------------------------------------------------------------------
 %  Title Page.
 %  ===========
-\renewcommand{\thepage}{\roman{page}}
 \begin{document}
-\thispagestyle{empty}
-
-%  Latex document header.
-%  ======================
-\begin{latexonly}
-   CCLRC / \textsc{Rutherford Appleton Laboratory} \hfill \textbf{\stardocname}\\
-   {\large Particle Physics \& Astronomy Research Council}\\
-   {\large Starlink Project\\}
-   {\large \stardoccategory\ \stardocnumber}
-   \begin{flushright}
-   \stardocauthors\\
-   \stardocdate
-   \end{flushright}
-   \vspace{-4mm}
-   \rule{\textwidth}{0.5mm}
-   \vspace{5mm}
-   \begin{center}
-   {\LARGE\bf  \stardoctitle \\ [2.5ex]}
-   {\Large\bf  \stardocversion \\ [4ex]}
-   \includegraphics{sun45_cover}
-   \end{center}
-   \vspace{5mm}
-
-% ? Add picture here if required for the LaTeX version.
-%   e.g. \includegraphics[scale=0.3]{filename.ps}
-% ? End of picture
-
-% ? Heading for abstract if used.
-   \vspace{10mm}
-   \begin{center}
-      {\Large\textbf{Abstract}}
-   \end{center}
-% ? End of heading for abstract.
-\end{latexonly}
-
-%  HTML documentation header.
-%  ==========================
-\begin{htmlonly}
-   \xlabel{}
-   \begin{rawhtml} <H1 ALIGN=CENTER> \end{rawhtml}
-      \stardoctitle\\
-      \stardocversion
-
-% ? Add picture here if required for the hypertext version.
-   \includegraphics{sun45_cover}
-% ? End of picture
-
-   \begin{rawhtml} </H1> <HR> \end{rawhtml}
-
-   \begin{rawhtml} <P> <I> \end{rawhtml}
-   \stardoccategory\ \stardocnumber \\
-   \stardocauthors \\
-   \stardocdate
-   \begin{rawhtml} </I> </P> <H3> \end{rawhtml}
-      \htmladdnormallink{CCLRC}{http://www.cclrc.ac.uk} /
-      \htmladdnormallink{Rutherford Appleton Laboratory}
-                        {http://www.cclrc.ac.uk/ral} \\
-      \htmladdnormallink{Particle Physics \& Astronomy Research Council}
-                        {http://www.pparc.ac.uk} \\
-   \begin{rawhtml} </H3> <H2> \end{rawhtml}
-      \htmladdnormallink{Starlink Project}{http://www.starlink.ac.uk/}
-   \begin{rawhtml} </H2> \end{rawhtml}
-   \htmladdnormallink{\htmladdimg{source.gif} Retrieve hardcopy}
-      {http://www.starlink.ac.uk/cgi-bin/hcserver?\stardocsource}\\
-
-%  HTML document table of contents.
-%  ================================
-%  Add table of contents header and a navigation button to return to this
-%  point in the document (this should always go before the abstract \section).
-  \label{stardoccontents}
-  \begin{rawhtml}
-    <HR>
-    <H2>Contents</H2>
-  \end{rawhtml}
-  \htmladdtonavigation{\htmlref{\htmladdimg{contents_motif.gif}}
-        {stardoccontents}}
-
-% ? New section for abstract if used.
-  \section{\xlabel{abstract}Abstract}
-% ? End of new section for abstract
-\end{htmlonly}
-
-% -----------------------------------------------------------------------------
-% ? Document Abstract. (if used)
-%  ==================
-\stardocabstract
-% ? End of document abstract
-% -----------------------------------------------------------------------------
-% ? Latex document Table of Contents (if used).
-%  ===========================================
-  \newpage
-  \begin{latexonly}
-    \setlength{\parskip}{0mm}
-    \tableofcontents
-    \setlength{\parskip}{\medskipamount}
-    \markboth{\stardocname}{\stardocname}
-  \end{latexonly}
-% ? End of Latex document table of contents
-% -----------------------------------------------------------------------------
-\cleardoublepage
-\renewcommand{\thepage}{\arabic{page}}
-\setcounter{page}{1}
+\scfrontmatter
 
 \section{\xlabel{introduction}Introduction}
 
@@ -585,45 +84,35 @@ it is recommended that you should read the MNRAS paper ``An optimal extraction a
 
 To initialize the PHOTOM package so that you can run its programs from
 the C-shell you use the command:
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 % photomstart
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 (after setting yourself up to run Starlink software -
 see `Setting up your environment' in \xref{SUN/145}{sun145}{}).
 
 Similarly to set up PHOTOM to run from within \xref{ICL}{sg5}{} use:
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 ICL> photomstart
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 
 \subsection{\xlabel{getting_help}Getting help}
 
 On-line help is available for all the PHOTOM programs using the command:
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 % photomhelp
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 from the C-shell, or by using the command:
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 ICL> help photom
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 when running ICL. Help can also be found by specifying ? or ?? as the
 reply to any program prompt.
 
 As an alternative to these approaches this document may also be viewed
 on-line using a hypertext browser. To do this use the command:
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 % showme sun45
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 
 If you come across any bugs or problems when using PHOTOM then e-mail
 a description to: \texttt{starlink@jiscmail.ac.uk}.
@@ -647,22 +136,18 @@ particularly when setting the size and orientation of the aperture.
 
 You can create a \xref{GWM X-windows}{sun130}{} display with an overlay
 using the command:
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 % xmake xwindows -overlay -ovcolour green
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 and can display an image in this window either using the
 \xref{KAPPA (SUN/95)}{sun95}{}
 \xref{DISPLAY}{sun95}{DISPLAY} program, or if this isn't available
 the \htmlref{PHOTGREY}{PHOTGREY} program.
 
 You can now start up the main PHOTOM program by typing the command:
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 % photom
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 this could be from the C-shell or ICL.
 
 The first response from this program is a request for the name of the
@@ -731,11 +216,9 @@ controlled by the parameters SEARCH, POSITIVE, MAXSHIFT, MAXITER and
 TOLER. These cannot be changed from within the program, and if
 alternative values are required they should be given on the
 command-line when starting PHOTOM. For instance:
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 % photom positive=f
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 would make PHOTOM centroid on objects whose signal was negative (not a
 very likely choice).
 
@@ -931,7 +414,7 @@ to the object aperture.
 The PADU parameter defines the number of photons for each interval of
 the data. Multiplying the data value in each pixel by PADU gives the
 number of photons recorded (after correcting for BIASLE). If this
-parameter is unknown then leave it at 1. It is {\bf necessary to provide
+parameter is unknown then leave it at 1. It is \textbf{necessary to provide
 an estimate of this number} if optimal extraction is to be carried
 out correctly.
 
@@ -1005,7 +488,7 @@ known. The message \st{Errors from data variance} will signify that
 this has been chosen. A variance component may not always be present
 in data file along with the data array (indeed this can only be true
 if you are storing your images in NDFs, see
-\hyperref{here}{section \S}{}{dataformat}),
+\slhyperref{here}{section \S}{}{dataformat}),
 and if this is the case then PHOTOM
 will issue the warning \st{Data does not have a variance component} if this
 method is selected.
@@ -1024,10 +507,8 @@ produced the combined data and using method three.
 Appendix \ref{errors} gives a full discussion of the calculation of
 the errors assuming photon statistics.
 \end{latexonly}
-\begin{htmlonly}
-A full discussion of the calculation of
-the errors, assuming photon statistics, is given \htmlref{elsewhere}{errors}.
-\end{htmlonly}
+
+
 
 \subsubsection{S --- sky}
 
@@ -1083,11 +564,9 @@ starts. They all have reasonable defaults, but if required can be
 changed before running the program. The way to set a new value for one
 of these is to use the keyword (the name by which the parameter is
 always referred to) on the command line, as in :
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 % photom usemags=f resfile=flux.dat
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 This outputs the values in photon counts (i.e. as modified by the
 BIASLE and PADU parameters) and writes the results of the analysis to
 the file \texttt{flux.dat}.
@@ -1131,24 +610,18 @@ that you're storing your images in NDFs).
 So for instance if you've got an image with a FITS-type header and
 the exposure time of the image is recorded in the record with name
 \verb+EXPOSURE+, then you'd use a command like:
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 % photom exsource=header etime=exposure
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 A simple floating point value (\verb+600+) is indicated by:
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 % photom exsource=constant etime=600
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 An HDS object \verb+ext_time+ in the CCDPACK extension of an NDF is
 indicated by:
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 % photom exsource=hds etime=more.ccdpack.ext_time
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 The structure of an NDF can be viewed using the HDSTRACE
 (\xref{SUN/102}{sun102}{}) utility. The default exposure time is
 \verb+1.0+.
@@ -1210,8 +683,7 @@ that contains the commands you would have used interactively.  It may be
 necessary to run the program by hand first to verify the order of the
 prompts. An example input file (\texttt{photom.in} say) could contain the
 following commands:
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 FRAME
 N
 5.0
@@ -1220,8 +692,7 @@ N
 F
 POSITIONS.DAT
 E
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 In this example the image data is assumed to be in a file \texttt{FRAME}
 in the default directory. The size and shape of the aperture is set
 using the non-interactive command, \texttt{N} and the command \texttt{F}
@@ -1229,15 +700,13 @@ instructs the program to take the initial positions from the file
 \texttt{POSITIONS.DAT}. The \texttt{E} command ends the program.
 
 The program could then be run in the background with the command
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 % photom < photom.in > photom.out &
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 
 Using \htmlref{AUTOPHOTOM}{AUTOPHOTOM} requires that a file with a
 specified format is created, the details of which are described in
-\hyperref{this appendix}{in appendix }{}{AUTOPHOTOM}.
+\slhyperref{this appendix}{in appendix }{}{AUTOPHOTOM}.
 Basically this
 describes each aperture and also allows information about the sky
 region associated with it to be given. The sky region can be defined
@@ -1266,18 +735,14 @@ be given on the command line (see \xref{SG/4}{sg4}{}, the ADAM User's
 Manual). The keywords have the same name as the parameters; for
 example the search box for the centroiding can be changed using the
 command.
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 ICL> photom search=5
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 
 From the C-shell the keywords can be included on the command line.
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 % photom search=5
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 
 \section{\xlabel{using_different_image_formats}Using \xlabel{dataformat}different \label{dataformat}image formats}
 
@@ -1297,16 +762,14 @@ To make this work for you, you need to setup the CONVERT
 (\xref{SUN/55}{sun55}{}) package and then pass images to PHOTOM
 programs together with their file extensions. So if you wanted to work
 on the IRAF image \st{pix.imh} you'd use a command sequence like:
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 % convert
 % kappa
 % xmake xwindows -overlay -ovcolour green
 % display in=pix.imh device=xw
 % photom in=pix.imh device=xov
 ... enter interactive command loop ...
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 In this case the file extension ``tells'' PHOTOM and the
 \xref{KAPPA}{sun95}{} program \xref{DISPLAY}{sun95}{DISPLAY} that they
 have an IRAF image. You should look at the CONVERT document (SUN/55)
@@ -1625,7 +1088,7 @@ addition, the following Starlink packages have been used: PHOTOM,} ...
       \sstitemlist{
 
         \sstitem
-        {\em Aperture Extraction} -- The input/output file must contain
+        \emph{Aperture Extraction} -- The input/output file must contain
         one line per-object that has the following information:
         \begin{description}
            \item  \texttt{INDEX XPOS YPOS MAG MAGERR SKY SIGNAL CODE MAJOR
@@ -1681,7 +1144,7 @@ addition, the following Starlink packages have been used: PHOTOM,} ...
        The other fields are the same as for an object aperture.\\
 
         \sstitem
-        {\em Optimal Extraction} -- Then the first star in the file must be
+        \emph{Optimal Extraction} -- Then the first star in the file must be
         the PSF. In this case the following information must be provided:
         \begin{description}
            \item  \texttt{INDEX XPOS YPOS FWHM1 FWHM2 ROT CODE CLIP SEE
@@ -2633,17 +2096,13 @@ The program also ensures that the density of points does not result in
 the central apertures overlapping.
 
 PHOTOPT can be run from ICL or the C-shell. From ICL use :
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 ICL> photopt
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 From the C-shell use (assuming photomstart has been executed) :
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 % photopt
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 The full description of PHOTOPT follows.
 
 \sstroutine{PHOTOPT}{
