--- a/applications/observe/sun146.tex
+++ b/applications/observe/sun146.tex
@@ -1,258 +1,36 @@
-\documentclass[11pt]{article}
-\usepackage{graphicx}
-\pagestyle{myheadings}
+\documentclass[11pt,noabs]{starlink}
 
 %% Need PDF to take preference over PNG
 \DeclareGraphicsExtensions{.pdf,.png}
 
 % -----------------------------------------------------------------------------
 % ? Document identification
-\newcommand{\stardoccategory}  {Starlink User Note}
-\newcommand{\stardocinitials}  {SUN}
-\newcommand{\stardocsource}    {sun\stardocnumber}
-\newcommand{\stardocnumber}    {146.4}
-\newcommand{\stardocauthors}   {Julian Osborne, Jeremy Ashley, \& Grant Privett}
-\newcommand{\stardocdate}      {25th June 1996}
-\newcommand{\stardoctitle}     {OBSERVE --- Check Star Observability}
-\newcommand{\stardocversion}   {Version 2.2}
-\newcommand{\stardocmanual}    {User's Guide}
-\newcommand{\stardocabstract}  {[Text of abstract]}
+\stardoccategory    {Starlink User Note}
+\stardocinitials    {SUN}
+\stardocsource      {sun\stardocnumber}
+\stardocnumber      {146.4}
+\stardocauthors     {Julian Osborne, Jeremy Ashley, \& Grant Privett}
+\stardocdate        {25th June 1996}
+\stardoctitle       {OBSERVE --- Check Star Observability}
+\stardocversion     {Version 2.2}
+\stardocmanual      {User's Guide}
 % ? End of document identification
 
 % -----------------------------------------------------------------------------
-
-\newcommand{\stardocname}{\stardocinitials /\stardocnumber}
-\markright{\stardocname}
-\setlength{\textwidth}{160mm}
-\setlength{\textheight}{230mm}
-\setlength{\topmargin}{-2mm}
-\setlength{\oddsidemargin}{0mm}
-\setlength{\evensidemargin}{0mm}
-\setlength{\parindent}{0mm}
-\setlength{\parskip}{\medskipamount}
-\setlength{\unitlength}{1mm}
-
-% -----------------------------------------------------------------------------
-%  Hypertext definitions.
-%  ======================
-%  These are used by the LaTeX2HTML translator in conjunction with star2html.
-
-%  Comment.sty: Version 2.0, 19 June 1992
-%  Selectively in/exclude pieces of text.
-%
-%  Author
-%    Victor Eijkhout                                      <eijkhout@cs.utk.edu>
-%    Department of Computer Science
-%    University Tennessee at Knoxville
-%    104 Ayres Hall
-%    Knoxville, TN 37996
-%    USA
-
-%  Do not remove the %begin{latexonly} and %end{latexonly} lines (used by
-%  star2html to signify raw TeX that latex2html cannot process).
-%begin{latexonly}
-\makeatletter
-\def\makeinnocent#1{\catcode`#1=12 }
-\def\csarg#1#2{\expandafter#1\csname#2\endcsname}
-
-\def\ThrowAwayComment#1{\begingroup
-    \def\CurrentComment{#1}%
-    \let\do\makeinnocent \dospecials
-    \makeinnocent\^^L% and whatever other special cases
-    \endlinechar`\^^M \catcode`\^^M=12 \xComment}
-{\catcode`\^^M=12 \endlinechar=-1 %
- \gdef\xComment#1^^M{\def\test{#1}
-      \csarg\ifx{PlainEnd\CurrentComment Test}\test
-          \let\html@next\endgroup
-      \else \csarg\ifx{LaLaEnd\CurrentComment Test}\test
-            \edef\html@next{\endgroup\noexpand\end{\CurrentComment}}
-      \else \let\html@next\xComment
-      \fi \fi \html@next}
-}
-\makeatother
-
-\def\includecomment
- #1{\expandafter\def\csname#1\endcsname{}%
-    \expandafter\def\csname end#1\endcsname{}}
-\def\excludecomment
- #1{\expandafter\def\csname#1\endcsname{\ThrowAwayComment{#1}}%
-    {\escapechar=-1\relax
-     \csarg\xdef{PlainEnd#1Test}{\string\\end#1}%
-     \csarg\xdef{LaLaEnd#1Test}{\string\\end\string\{#1\string\}}%
-    }}
-
-%  Define environments that ignore their contents.
-\excludecomment{comment}
-\excludecomment{rawhtml}
-\excludecomment{htmlonly}
-
-%  Hypertext commands etc. This is a condensed version of the html.sty
-%  file supplied with LaTeX2HTML by: Nikos Drakos <nikos@cbl.leeds.ac.uk> &
-%  Jelle van Zeijl <jvzeijl@isou17.estec.esa.nl>. The LaTeX2HTML documentation
-%  should be consulted about all commands (and the environments defined above)
-%  except \xref and \xlabel which are Starlink specific.
-
-\newcommand{\htmladdnormallinkfoot}[2]{#1\footnote{#2}}
-\newcommand{\htmladdnormallink}[2]{#1}
-\newcommand{\htmladdimg}[1]{}
-\newenvironment{latexonly}{}{}
-\newcommand{\hyperref}[4]{#2\ref{#4}#3}
-\newcommand{\htmlref}[2]{#1}
-\newcommand{\htmlimage}[1]{}
-\newcommand{\htmladdtonavigation}[1]{}
-\newcommand{\latexhtml}[2]{#1}
-\newcommand{\html}[1]{}
-
-%  Starlink cross-references and labels.
-\newcommand{\xref}[3]{#1}
-\newcommand{\xlabel}[1]{}
-
-%  LaTeX2HTML symbol.
-\newcommand{\latextohtml}{{\bf LaTeX}{2}{\tt{HTML}}}
-
-%  Define command to re-centre underscore for Latex and leave as normal
-%  for HTML (severe problems with \_ in tabbing environments and \_\_
-%  generally otherwise).
-\newcommand{\latex}[1]{#1}
-\newcommand{\setunderscore}{\renewcommand{\_}{{\tt\symbol{95}}}}
-\latex{\setunderscore}
-
-%  Redefine the \tableofcontents command. This procrastination is necessary
-%  to stop the automatic creation of a second table of contents page
-%  by latex2html.
-\newcommand{\latexonlytoc}[0]{\tableofcontents}
-
-% -----------------------------------------------------------------------------
-%  Debugging.
-%  =========
-%  Remove % on the following to debug links in the HTML version using Latex.
-
-% \newcommand{\hotlink}[2]{\fbox{\begin{tabular}[t]{@{}c@{}}#1\\\hline{\footnotesize #2}\end{tabular}}}
-% \renewcommand{\htmladdnormallinkfoot}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\htmladdnormallink}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\hyperref}[4]{\hotlink{#1}{\S\ref{#4}}}
-% \renewcommand{\htmlref}[2]{\hotlink{#1}{\S\ref{#2}}}
-% \renewcommand{\xref}[3]{\hotlink{#1}{#2 -- #3}}
-%end{latexonly}
-% -----------------------------------------------------------------------------
-% ? Document specific \newcommand or \newenvironment commands.
-
-% Environment for indenting and using a small font.
-\newenvironment{myquote}{\begin{quote}\begin{small}}{\end{small}\end{quote}}
+% ? Document specific \providecommand or \newenvironment commands.
 
 % in-line verbatims
-\newcommand{\myverb}[1]{{\small \verb+#1+}}
+\providecommand{\myverb}[1]{{\small \verb+#1+}}
 
 % degrees symbol - requires hypertext to be post processed.
-\newcommand{\degrees}{\hbox{$^\circ$}}
-\begin{htmlonly}
-\newcommand{\degrees}{{\rawhtml &deg;}}
-\end{htmlonly}
+\providecommand{\degrees}{\hbox{$^\circ$}}
 
 % ? End of document specific commands
 % -----------------------------------------------------------------------------
 %  Title Page.
 %  ===========
-% \renewcommand{\thepage}{\roman{page}}
 \begin{document}
-\thispagestyle{empty}
-
-%  Latex document header.
-%  ======================
-\begin{latexonly}
-   CCLRC / {\sc Rutherford Appleton Laboratory} \hfill {\bf \stardocname}\\
-   {\large Particle Physics \& Astronomy Research Council}\\
-   {\large Starlink Project\\}
-   {\large \stardoccategory\ \stardocnumber}
-   \begin{flushright}
-   \stardocauthors\\
-   \stardocdate
-   \end{flushright}
-   \vspace{-4mm}
-   \rule{\textwidth}{0.5mm}
-   \vspace{5mm}
-   \begin{center}
-   {\Huge\bf  \stardoctitle \\ [2.5ex]}
-   {\LARGE\bf \stardocversion \\ [4ex]}
-   {\Huge\bf  \stardocmanual}
-   \end{center}
-   \vspace{5mm}
-
-% ? Heading for abstract if used.
-%  \vspace{10mm}
-%  \begin{center}
-%     {\Large\bf Abstract}
-%  \end{center}
-% ? End of heading for abstract.
-\end{latexonly}
-
-%  HTML documentation header.
-%  ==========================
-\begin{htmlonly}
-   \xlabel{}
-   \begin{rawhtml} <H1> \end{rawhtml}
-      \stardoctitle\\
-      \stardocversion\\
-      \stardocmanual
-   \begin{rawhtml} </H1> \end{rawhtml}
-
-% ? Add picture here if required.
-% ? End of picture
-
-   \begin{rawhtml} <P> <I> \end{rawhtml}
-   \stardoccategory\ \stardocnumber \\
-   \stardocauthors \\
-   \stardocdate
-   \begin{rawhtml} </I> </P> <H3> \end{rawhtml}
-      \htmladdnormallink{CCLRC}{http://www.cclrc.ac.uk} /
-      \htmladdnormallink{Rutherford Appleton Laboratory}
-                        {http://www.cclrc.ac.uk/ral} \\
-      \htmladdnormallink{Particle Physics \& Astronomy Research Council}
-                        {http://www.pparc.ac.uk} \\
-   \begin{rawhtml} </H3> <H2> \end{rawhtml}
-      \htmladdnormallink{Starlink Project}{http://www.starlink.ac.uk/}
-   \begin{rawhtml} </H2> \end{rawhtml}
-   \htmladdnormallink{\htmladdimg{source.gif} Retrieve hardcopy}
-      {http://www.starlink.ac.uk/cgi-bin/hcserver?\stardocsource}\\
-
-%  HTML document table of contents.
-%  ================================
-%  Add table of contents header and a navigation button to return to this
-%  point in the document (this should always go before the abstract \section).
-  \label{stardoccontents}
-  \begin{rawhtml}
-    <HR>
-    <H2>Contents</H2>
-  \end{rawhtml}
-  \renewcommand{\latexonlytoc}[0]{}
-  \htmladdtonavigation{\htmlref{\htmladdimg{contents_motif.gif}}
-        {stardoccontents}}
-
-% ? New section for abstract if used.
-% \section{\xlabel{abstract}Abstract}
-% ? End of new section for abstract
-\end{htmlonly}
-
-% -----------------------------------------------------------------------------
-% ? Document Abstract. (if used)
-%  ==================
-% \stardocabstract
-% ? End of document abstract
-% -----------------------------------------------------------------------------
-% ? Latex document Table of Contents (if used).
-%  ===========================================
-%  \newpage
- \begin{latexonly}
-   \setlength{\parskip}{0mm}
-   \latexonlytoc
-   \setlength{\parskip}{\medskipamount}
-   \markright{\stardocname}
- \end{latexonly}
-% ? End of Latex document table of contents
-% -----------------------------------------------------------------------------
-\newpage
-% \renewcommand{\thepage}{\arabic{page}}
-% \setcounter{page}{1}
+\scfrontmatter
 
 \section{\xlabel{VERSION}This Version}
 \label{sec:version}
@@ -263,7 +41,7 @@ computers.
 
 A number of changes have been made in {\bf{observe}} \stardocversion.
 It now makes use of the ADAM parameter system and does not employ
-routines from {\sc ASTERIX} for printing information to the screen. It
+routines from \textsc{ASTERIX} for printing information to the screen. It
 also presents the user with the full list of telescopes from SLALIB,
 allowing a wider choice of pre-defined observing sites.
 
@@ -301,12 +79,12 @@ the best option. We recommend that the GKS landscape postscript device
 {\tt{ps\_l}} is chosen.  The following command will then print the
 output file ({\tt{\%}} is the shell prompt):
 
-\begin{verbatim}
-      % lpr -Pstar_post gks74.ps
-\end{verbatim}
+\begin{terminalv}
+% lpr -Pstar_post gks74.ps
+\end{terminalv}
 
 where {\tt{star\_post}} is the name of the postscript printer.
-(Subsequent plots to this device produce filenames {\tt gks74.ps.1},
+(Subsequent plots to this device produce filenames \texttt{gks74.ps.1},
 {\em{etc}}). You can also look at this output file on an X-terminal
 using {\bf{ghostview}} in landscape mode.
 
@@ -332,8 +110,8 @@ scale shows local time with midnight at the centre. Figure
 \begin{tabular}{|c|l|}
 \hline
 \large
----{\sf X}--- & start of astronomical night \\
----{\sf V}--- & end of astronomical night \\
+---\textsf{X}--- & start of astronomical night \\
+---\textsf{V}--- & end of astronomical night \\
 ---$\uparrow$--- & star rises \\
 ---$\downarrow$--- & star sets \\
 ---$\circ$--- & star rises above 30$^o$ elevation\\
@@ -404,8 +182,8 @@ Suppose that you want to check when the bright star Mira can be
 observed  from the AAT.  You should enter the command {\bf{observe}} and
 respond to the questions as  shown:
 
-\begin{quote}\small
-\begin{verbatim}
+\begin{small}
+\begin{terminalv}
 > observe
 OBSERVE V2.2
 
@@ -446,8 +224,8 @@ OUT - Text file name /@0/ > outputfile
 AGAIN - New telescope (T); New Star (S); Both (B) or QUIT (Q) > q
 >
 > lpr -Pstar_post gks74.ps
-\end{verbatim}
-\end{quote}
+\end{terminalv}
+\end{small}
 
 Figure~\ref{fig_output} shows the result of the above query.
 From the description of the graph in section~\ref{sec:description},
